# sol-token-demo-amm

./: .gitignore  Anchor.toml  package.json
amm-anchor/: Cargo.toml
programs/vvs-sol-token-full/: Cargo.toml
programs/vvs-sol-token-full/src/: lib.rs
programs/vvs-sol-token-full/src/instructions/: pre_initialize.rs
tests/: token-deploy.ts  vvs-sol-token-full.ts
