[package]
name = "vvs-sol-token-full"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vvs_sol_token_full"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
amm-anchor = {path = "../../amm-anchor"}
